# kup

./: .cruft.json  CHANGELOG  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: BuildAndTest.yaml  master-push.yml  test-pr.yml  update-version.yml
nix/: README.md
nix/kup/: default.nix
package/nix/: install
src/kup/: __main__.py  add-help.md  install-help.md  list-help.md  nix.py  output.py  package.py  shell-help.md  telemetry.py  update-help.md
src/tests/integration/: test_integration.py
