[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kup"
version = "0.2.5"
description = "kup is a tool for managing installations of the K framework along with the different available semantics"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "git-url-parse>=1.2.2,<2",
    "pyxdg>=0.28",
    "requests>=2.28.1,<3",
    "rich>=12.6.0,<13",
    "terminaltables>=3.1.10,<4",
    "tinynetrc>=1.3.1,<2",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
kup = "kup.__main__:main"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
    "types-requests>=2.28.11,<3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
